Added display block

--- a/wildcats.html
+++ b/wildcats.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Soccer Lineup Generator</title>
     <style>
-                body {
+        body {
             font-family: sans-serif;
         }
 
@@ -72,7 +72,7 @@
 
         .player-selection label {
             margin-right: 10px;
-            display: block;
+            /* display: block; */
         }
     </style>
 </head>
